UPDATE: Minor tweaks.